# terminal-app-host

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/terminal_app_host/: __main__.py  app.py  app.tcss  config.py
